--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a-camera gps-new-camera positionMinAccuracy="10" rotation-reader> </a-camera>
 
         <a-box color="yellow" look-at="[gps-new-camera]" scale="1 1 1"
-            gps-new-entity-place="latitude: 38.999093; longitude: -9.0070356;" />
+            gps-new-entity-place="latitude: -30.047446; longitude: -51.192977;" />
     </a-scene>
 </body>
 
