--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene renderer="logarithmicDepthBuffer: true;" vr-mode-ui='enabled: false' embedded arjs='sourceType: webcam;'>
         <a-assets>
-            <a-asset-item id="molecula" src="molecula.gltf"></a-asset-item>
+            <a-asset-item id="molecula" src="assets/molecula.gltf"></a-asset-item>
         </a-assets>
 
         <a-camera gps-new-camera positionMinAccuracy="10" rotation-reader> </a-camera>
