--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a-camera gps-new-camera positionMinAccuracy="10" rotation-reader> </a-camera>
 
         <a-gltf-model src="#molecula" look-at="[gps-new-camera]" scale="3 3 3"
-            gps-new-entity-place="latitude: 38.999093; longitude: -9.0070356;" />
+            gps-new-entity-place="latitude: -30.047446; longitude: -51.192977;" />
     </a-scene>
 </body>
 
